# flickr-immich-k8s-sync-operator

./: .gitignore  CLAUDE.md  DOCKERHUB_OVERVIEW.md  Dockerfile  Makefile  README.md  blurimage.py  build-container-multiarch.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: buildmultiarchandpush.yml
flickr_immich_k8s_sync_operator/: __init__.py  __main__.py  config.py  operator.py
scripts/: blurimage.py  update_badge.py
tests/: test_config.py  test_operator.py
